# Maze_Generation

./: .gitignore  =2.5  README.md  USAGE.md  best_maze_design_林士清.json  input.json  k_centered_maze_puzzle.py  main.py  maze_15_15_1.json  maze_15_15_2.json  maze_15_15_gen.json  maze_7_7.json  maze_baseline.md  maze_baseline_林士清.md  pyproject.toml  requirements.txt  run.py  solve_maze.py  train_dqn.py
Maze_Generation-master-four-algorithms/: USAGE.md  k_centered_maze_puzzle.py  out.json
Maze_Generation-master-four-algorithms/scripts/: ai_player.py  config.py  exporter.py  game_rules.py  maze.py  strategies.py  ui.py
assets/: maze_assets.json
data/: best_maze.json  boss_config.json  sample_config.json  sample_maze_15.json
docs/: algorithm_analysis.md  architecture.md  presentation_outline.md  report_placeholder.md
game/: __init__.py  constants.py  engine.py  scene_manager.py  visibility.py
game/ai/: __init__.py  dqn.py  greedy.py
game/assets/: config.py  manager.py  placeholder.py
game/battle/: __init__.py  rules.py
game/entities/: animation.py  base.py  markers.py  maze_tile.py  pickups.py  player.py
scripts/: ai_player.py  build_ui_assets.py  config.py  exporter.py  maze.py  strategies.py  ui.py
tests/: conftest.py  test_ai_strategy.py  test_battle_regression.py  test_boss_solver.py  test_cli_snapshots.py  test_game_engine.py  test_generators.py  test_json_io.py  test_maze_regression.py  test_maze_validator.py  test_optional_dependencies.py  test_project_layout.py  test_pygame_regression.py  test_resource_optimizer.py
tools/: build_ui_assets.py
(+71 files in other folders)
